{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "f8734a6e-e93d-46b3-bb5d-e937121e4c71",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "c975f79a-a973-468e-a4a8-d88c046b3030",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraRotation",
                    "type": "PassThrough",
                    "id": "7083c601-80cc-4561-b5e7-da5db5d9f4dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootLeft",
                    "type": "Button",
                    "id": "765bcec0-f9e3-430a-80f7-d544ec2a0ce0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootRight",
                    "type": "Button",
                    "id": "3d1e0cb1-47eb-4eb7-bb1d-2793b918317a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EquipLeft",
                    "type": "Button",
                    "id": "e1b5644a-057d-4ecf-868d-4b8de4ec131d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EquipRight",
                    "type": "Button",
                    "id": "7270f22f-3a63-4b5f-8048-fae3bfcbed56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "b3f4ac42-8d11-4edf-931f-acee129f2bb5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b6ba10c9-9476-4e0c-abd1-1cfd9ef691e3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5b69b466-5bb7-4783-a253-e2ea45edcf8c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4a74fe27-e3b8-4612-a827-7253eaa6bc36",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ed912992-d07c-422d-a5c0-5b4d7efe33bf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4e943826-3ff2-4eca-a212-860e7c653be4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7786bec8-7065-4ada-988e-d718a876d707",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "feb46245-85fb-4dd1-a303-6c9e4bf05ac7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b062e658-68fe-4b72-a3a1-4e3c2c34233e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d1f2ca7-aca8-4d85-b075-b4c30fb8cb57",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Scarecrow",
            "id": "7cd00adf-d31b-4763-af7f-2462ad7ca98b",
            "actions": [
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "b09afb73-8f5f-481f-ae20-9024327a6354",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6cd4e342-42cf-4f58-9f05-686099276084",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}